fix icons and scrollbar

--- a/app/styles/edit.scss
+++ b/app/styles/edit.scss
@@ -57,9 +57,24 @@ button, .btn {
 }
 
 .savedlist-buttons {
-  width: 50px;
+  width: 75px;
 }
-
+.sca-content::-webkit-scrollbar{
+width:16px;
+background-color:#424242;
+} 
+.sca-content::-webkit-scrollbar-thumb{
+background-color:#131313;
+border-radius:10px;
+}
+.sca-content::-webkit-scrollbar-thumb:hover{
+background-color:#212121;
+border:1px solid #212121;
+}
+.sca-content::-webkit-scrollbar-thumb:active{
+background-color:#424242;
+border:1px solid #424242;
+} 
 .color_[disabled] {
   background-color: #303030 !important;
   color: #BBDEFB !important;
